sitemap , links update commit.

--- a/calculators/income-tax-calculator.html
+++ b/calculators/income-tax-calculator.html
@@ -233,6 +233,8 @@
   <section class="content-section">
     <h2>Related Calculators & Resources</h2>
     <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
       <a href="hra-calculator.html">🏠 HRA Calculator</a>
       <a href="medical-insurance-80d-calculator.html">🏥 Section 80D Calculator</a>
       <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
