--- a/calculators/lumpsum-investment-calculator.html
+++ b/calculators/lumpsum-investment-calculator.html
@@ -203,9 +203,11 @@
     <div class="related-links">
       <a href="sip-calculator.html">📈 SIP Calculator</a>
       <a href="compound-interest-calculator.html">💰 Compound Interest Calculator</a>
+      <a href="mutual-fund-return-calculator.html">📊 Mutual Fund Return Calculator</a>
       <a href="sip-vs-lumpsum-calculator.html">⚖️ SIP vs Lumpsum</a>
       <a href="mutual-fund-returns-calculator.html">📊 Mutual Fund Returns</a>
       <a href="inflation-impact-calculator.html">📉 Inflation Impact</a>
+      <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
       <a href="../blog/sip-vs-lumpsum-investment.html">📖 SIP vs Lumpsum Guide</a>
     </div>
   </section>
