--- a/calculators/mutual-fund-return-calculator.html
+++ b/calculators/mutual-fund-return-calculator.html
@@ -264,8 +264,10 @@
       <a href="sip-calculator.html">📈 SIP Calculator</a>
       <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment Calculator</a>
       <a href="step-up-sip-calculator.html">📈 Step-Up SIP Calculator</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact Calculator</a>
       <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
       <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
+      <a href="income-tax-calculator.html">🧾 Income Tax Calculator</a>
       <a href="real-cagr-calculator.html">📊 CAGR Calculator</a>
     </div>
   </section>
