--- a/calculators/sip-calculator.html
+++ b/calculators/sip-calculator.html
@@ -263,6 +263,8 @@
   <section class="content-section">
     <h2>Related Calculators & Resources</h2>
     <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="loan-prepayment-foreclosure-calculator.html">🔄 Loan Prepayment Calculator</a>
       <a href="step-up-sip-calculator.html">📈 Step-Up SIP Calculator</a>
       <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment Calculator</a>
       <a href="mutual-fund-return-calculator.html">📊 Mutual Fund Calculator</a>
