--- a/index.html
+++ b/index.html
@@ -148,6 +148,48 @@
   </div>
 
   <div class="content-section">
+    <h2>All Calculators (Text Links)</h2>
+    <ul class="all-calculators-list">
+      <li><a href="calculators/emi-calculator.html">EMI Calculator</a></li>
+      <li><a href="calculators/income-tax-calculator.html">Income Tax Calculator</a></li>
+      <li><a href="calculators/sip-calculator.html">SIP Calculator</a></li>
+      <li><a href="calculators/fd-calculator.html">FD Calculator</a></li>
+      <li><a href="calculators/epf-calculator.html">EPF Calculator</a></li>
+      <li><a href="calculators/in-hand-salary-calculator.html">In-Hand Salary Calculator</a></li>
+      <li><a href="calculators/salary-hike-percentage-calculator.html">Salary Hike Percentage Calculator</a></li>
+      <li><a href="calculators/loan-eligibility-calculator.html">Loan Eligibility Calculator</a></li>
+      <li><a href="calculators/hra-calculator.html">HRA Calculator</a></li>
+      <li><a href="calculators/ppf-maturity-calculator.html">PPF Maturity Calculator</a></li>
+      <li><a href="calculators/lumpsum-investment-calculator.html">Lumpsum Investment Calculator</a></li>
+      <li><a href="calculators/gratuity-calculator.html">Gratuity Calculator</a></li>
+      <li><a href="calculators/compound-interest-calculator.html">Compound Interest Calculator</a></li>
+      <li><a href="calculators/capital-gains-tax-calculator.html">Capital Gains Tax Calculator</a></li>
+      <li><a href="calculators/rd-calculator.html">RD Calculator</a></li>
+      <li><a href="calculators/nps-calculator.html">NPS Calculator</a></li>
+      <li><a href="calculators/education-loan-calculator.html">Education Loan Calculator</a></li>
+      <li><a href="calculators/credit-card-debt-payoff-calculator.html">Credit Card Debt Payoff Calculator</a></li>
+      <li><a href="calculators/retirement-planning-calculator.html">Retirement Planning Calculator</a></li>
+      <li><a href="calculators/mutual-fund-return-calculator.html">Mutual Fund Return Calculator</a></li>
+      <li><a href="calculators/step-up-sip-calculator.html">Step-Up SIP Calculator</a></li>
+      <li><a href="calculators/loan-prepayment-foreclosure-calculator.html">Loan Prepayment Foreclosure Calculator</a></li>
+      <li><a href="calculators/car-loan-vs-lease-calculator.html">Car Loan vs Lease Calculator</a></li>
+      <li><a href="calculators/buy-vs-rent-calculator.html">Buy vs Rent Calculator</a></li>
+      <li><a href="calculators/real-cagr-calculator.html">Real CAGR Calculator</a></li>
+      <li><a href="calculators/medical-insurance-80d-calculator.html">Section 80D Medical Insurance Calculator</a></li>
+      <li><a href="calculators/fire-calculator.html">FIRE Calculator</a></li>
+      <li><a href="calculators/wealth-goal-calculator.html">Wealth Goal Calculator</a></li>
+      <li><a href="calculators/gold-investment-calculator.html">Gold Investment Calculator</a></li>
+      <li><a href="calculators/emi-vs-sip-comparison-tool.html">EMI vs SIP Comparison Tool</a></li>
+      <li><a href="calculators/net-worth-calculator.html">Net Worth Calculator</a></li>
+      <li><a href="calculators/monthly-savings-planner.html">Monthly Savings Planner</a></li>
+      <li><a href="calculators/break-even-investment-calculator.html">Break-Even Investment Calculator</a></li>
+      <li><a href="calculators/credit-score-impact-simulator.html">Credit Score Impact Simulator</a></li>
+      <li><a href="calculators/inflation-impact-calculator.html">Inflation Impact Calculator</a></li>
+      <li><a href="calculators/simple-vs-compound-interest-calculator.html">Simple vs Compound Interest Calculator</a></li>
+    </ul>
+  </div>
+
+  <div class="content-section">
     <h2>Why Use Our Calculators?</h2>
     <p>Upkarna Online Tools provides free, accurate and easy-to-use calculators to help you make smarter financial decisions.</p>
   </div>
